candy-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candy-web
  namespace: candy
spec:
  selector:
    app: candy-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
